
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint_t ;
typedef int uint8_t ;


 int printf (char*,...) ;

__attribute__((used)) static void
hexdump(char *str, uint8_t *src, uint_t len)
{
 int i;

 printf("\t%s\t", str);
 for (i = 0; i < len; i++) {
  printf("%02x", src[i] & 0xff);
 }
 printf("\n");
}
